<resources>
    <string name="app_name">WonderfulWorkouts</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name_label">Name:</string>
    <string name="category_label">Category:</string>
    <string name="equipment_label">Equipment:</string>
    <string name="type_label">Type:</string>
    <string name="timed_label">Timed</string>
    <string name="reps_label">Reps</string>
    <string name="weight_reps_label">Weight/Reps</string>
    <string name="sign_out_label">Sign Out</string>
    <string name="weight_label">Weight:</string>
    <string name="biceps_label">Biceps:</string>
    <string name="chest_label">Chest:</string>
    <string name="thighs_label">Thighs:</string>
    <string name="waist_label">Waist:</string>
    <string name="hips_label">Hips:</string>
    <string name="neck_label">Neck:</string>
    <string name="calves_label">Calves:</string>
    <string name="enter_weight">Enter weight</string>
    <string name="movements_label">Movements:</string>
    <string name="past_workouts_label">Past Workouts:</string>
    <string name="title_login">Login</string>
    <string name="input_password">Password</string>
    <string name="input_email">Email</string>
    <string name="button_login">Login</string>
    <string name="add_movement">Add Movement</string>
    <string name="add_new_category">Add new category</string>
    <string name="add_new_equipment">Add new equipment</string>
    <string name="enter_category">Enter category</string>
    <string name="enter_equipment">Enter equipment</string>
    <string name="workout_duration">Duration:</string>
    <string name="enter_movement">Enter movement</string>
    <string-array name="categories">
        <item>All</item>
        <item>Abs</item>
        <item>Back</item>
        <item>Biceps</item>
        <item>Chest</item>
        <item>Legs</item>
        <item>Triceps</item>
    </string-array>
    <string-array name="equipment">
        <item>All</item>
        <item>Barbell</item>
        <item>Body weight</item>
        <item>Dumbbells</item>
        <item>Machine</item>
        <item>Pull-up bar</item>
    </string-array>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <string name="title_movements">Movements</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="duration">Duration</string>
</resources>