<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.NewEditMovementView">


    <TextView
        android:id="@+id/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/category_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="68dp"
        android:text="@string/name_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/equipment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/equipment_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/category_label" />

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/type_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/equipment_label"
        app:layout_constraintTop_toBottomOf="@+id/equipment_label" />

    <Button
        android:id="@+id/addMovementBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_movement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeGroup" />

    <RadioGroup
        android:id="@+id/typeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/equipmentList"
        app:layout_constraintTop_toBottomOf="@+id/equipmentList">

        <RadioButton
            android:id="@+id/timedRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timed_label"
            app:layout_constraintBottom_toBottomOf="@+id/typeLabel"
            app:layout_constraintStart_toEndOf="@+id/typeLabel"
            app:layout_constraintStart_toStartOf="@+id/nameInput"
            app:layout_constraintTop_toTopOf="@+id/typeLabel"
            app:layout_constraintVertical_bias="0.476" />

        <RadioButton
            android:id="@+id/repsRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps_label"
            app:layout_constraintStart_toStartOf="@+id/timedRadio"
            app:layout_constraintTop_toBottomOf="@+id/timedRadio" />

        <RadioButton
            android:id="@+id/weightRepsRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_reps_label"
            app:layout_constraintStart_toStartOf="@+id/repsRadio"
            app:layout_constraintTop_toBottomOf="@+id/repsRadio" />
    </RadioGroup>

    <AutoCompleteTextView
        android:id="@+id/categoryList"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_category"
        android:completionHint="Select a category"
        android:completionThreshold="1"
        app:layout_constraintBottom_toBottomOf="@+id/category_label"
        app:layout_constraintStart_toEndOf="@+id/equipment_label"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toTopOf="@+id/category_label" />

    <AutoCompleteTextView
        android:id="@+id/equipmentList"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_equipment"
        android:completionHint="Select equipment"
        android:completionThreshold="1"
        app:layout_constraintBottom_toBottomOf="@+id/equipment_label"
        app:layout_constraintStart_toEndOf="@+id/equipment_label"
        app:layout_constraintStart_toStartOf="@+id/categoryList"
        app:layout_constraintTop_toTopOf="@+id/equipment_label" />

    <EditText
        android:id="@+id/nameInput"
        android:hint="@string/enter_movement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/nameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/nameLabel"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>