<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEditMovement">

    <ImageButton
        android:id="@+id/addCategoryBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/categoryList"
        app:layout_constraintStart_toEndOf="@+id/categoryList"
        app:layout_constraintTop_toTopOf="@+id/categoryList"
        app:srcCompat="@android:drawable/ic_input_add" />

    <Spinner
        android:id="@+id/categoryList"
        android:layout_width="157dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="@+id/category_label"
        app:layout_constraintStart_toEndOf="@+id/equipment_label"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toTopOf="@+id/category_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/category_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="68dp"
        android:text="@string/name_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/repsRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/reps_label"
        app:layout_constraintStart_toStartOf="@+id/timedRadio"
        app:layout_constraintTop_toBottomOf="@+id/timedRadio" />

    <Spinner
        android:id="@+id/equipmentList"
        android:layout_width="157dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="@+id/equipment_label"
        app:layout_constraintStart_toEndOf="@+id/equipment_label"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toTopOf="@+id/equipment_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/equipment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/equipment_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/category_label" />

    <RadioButton
        android:id="@+id/timedRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timed_label"
        app:layout_constraintBottom_toBottomOf="@+id/typeLabel"
        app:layout_constraintStart_toEndOf="@+id/typeLabel"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toTopOf="@+id/typeLabel"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/type_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/equipment_label"
        app:layout_constraintTop_toBottomOf="@+id/equipment_label" />

    <RadioButton
        android:id="@+id/weightRepsRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/weight_reps_label"
        app:layout_constraintStart_toStartOf="@+id/repsRadio"
        app:layout_constraintTop_toBottomOf="@+id/repsRadio" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/nameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/nameLabel" />

    <ImageButton
        android:id="@+id/addEquipmentBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/equipmentList"
        app:layout_constraintStart_toEndOf="@+id/equipmentList"
        app:layout_constraintTop_toTopOf="@+id/equipmentList"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>